--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saerom-community",
+  "name": "saerom-anon-community",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
